--- a/capture_img.ipynb
+++ b/capture_img.ipynb
@@ -44,10 +44,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "oMa-0X9Z-aw_",
-        "outputId": "6235c9ba-63e8-4209-d1e8-73524f6d9f7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fa65b618-9b65-429b-b8e4-3c94d06a2716"
       },
       "source": [
         "from google.colab import drive\n",
@@ -68,10 +68,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "L1PcrbAO-9Yg",
-        "outputId": "e0368f6d-f4e2-4337-f633-66bb5562726e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "282296e5-40ee-4ff7-ccaa-551440209144"
       },
       "source": [
         "%cd drive/MyDrive/Deepfake-Detection/"
@@ -91,10 +91,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "msiqVBARcXG2",
-        "outputId": "e723fda4-e17a-443c-a994-98063bd96f81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "681a4cfb-a1e2-4615-d5b0-23ecd9ff5242"
       },
       "source": [
         "!ls -all"
@@ -141,13 +141,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "dH89VnHxvK4z",
-        "outputId": "181026e0-2d0a-4f43-cce9-efe0d339a68e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c5286cc4-b64a-448a-f139-1976ba39e176"
       },
       "source": [
-        "train_frame_folder = 'dfdc_train_part_2'\n",
+        "train_frame_folder = 'dfdc_train_part_3'\n",
         "with open(os.path.join(train_frame_folder, 'metadata.json'), 'r') as file:\n",
         "    data = json.load(file)\n",
         "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
@@ -159,7 +159,7 @@
         {
           "output_type": "stream",
           "text": [
-            "460\n"
+            "438\n"
           ],
           "name": "stdout"
         }
@@ -169,11 +169,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "QdVd9mRF-Q9m",
-        "outputId": "5871f296-c1c5-4083-cf88-3ca93f3bca8f",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 931
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "00fa1064-8e64-4020-af09-6785f28f836e"
       },
       "source": [
         "cnt =0\n",
@@ -249,20 +248,16 @@
             "340\n",
             "350\n",
             "360\n",
-            "370\n"
+            "370\n",
+            "380\n",
+            "390\n",
+            "400\n",
+            "410\n",
+            "420\n",
+            "430\n",
+            "438\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "error",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-800970b36cf7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0mcrop_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0my2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mx2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'REAL'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m                     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dataset/real/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.png'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcrop_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m                 \u001b[0;32melif\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'label'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'FAKE'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m                     \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dataset/fake/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mvid\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.png'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcrop_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31merror\u001b[0m: OpenCV(4.1.2) /io/opencv/modules/imgproc/src/resize.cpp:3720: error: (-215:Assertion failed) !ssize.empty() in function 'resize'\n"
-          ]
         }
       ]
     }
