--- a/capture_img.ipynb
+++ b/capture_img.ipynb
@@ -47,7 +47,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fa65b618-9b65-429b-b8e4-3c94d06a2716"
+        "outputId": "4293d812-a12e-4f37-b44e-123e1ee9c227"
       },
       "source": [
         "from google.colab import drive\n",
@@ -71,7 +71,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "282296e5-40ee-4ff7-ccaa-551440209144"
+        "outputId": "c1dc846b-3cb3-4d0e-84f0-b98d13e68dd1"
       },
       "source": [
         "%cd drive/MyDrive/Deepfake-Detection/"
@@ -94,7 +94,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "681a4cfb-a1e2-4615-d5b0-23ecd9ff5242"
+        "outputId": "df4e342f-16c9-4060-ad78-50864c598120"
       },
       "source": [
         "!ls -all"
@@ -144,22 +144,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c5286cc4-b64a-448a-f139-1976ba39e176"
+        "outputId": "82f41821-81c6-4127-a26a-d8fa1831ddca"
       },
       "source": [
-        "train_frame_folder = 'dfdc_train_part_3'\n",
+        "train_frame_folder = 'dfdc_train_part_49'\n",
         "with open(os.path.join(train_frame_folder, 'metadata.json'), 'r') as file:\n",
         "    data = json.load(file)\n",
         "list_of_train_data = [f for f in os.listdir(train_frame_folder) if f.endswith('.mp4')]\n",
         "detector = dlib.get_frontal_face_detector()\n",
         "print(len(list_of_train_data))"
       ],
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "438\n"
+            "1030\n"
           ],
           "name": "stdout"
         }
@@ -172,7 +172,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00fa1064-8e64-4020-af09-6785f28f836e"
+        "outputId": "be730a1b-6652-4bae-deeb-5dd1f9828dec"
       },
       "source": [
         "cnt =0\n",
@@ -207,7 +207,7 @@
         "        print(cnt)\n",
         "print(cnt)\n"
       ],
-      "execution_count": 6,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +255,70 @@
             "410\n",
             "420\n",
             "430\n",
-            "438\n"
+            "440\n",
+            "450\n",
+            "460\n",
+            "470\n",
+            "480\n",
+            "490\n",
+            "500\n",
+            "510\n",
+            "520\n",
+            "530\n",
+            "540\n",
+            "550\n",
+            "560\n",
+            "570\n",
+            "580\n",
+            "590\n",
+            "600\n",
+            "610\n",
+            "620\n",
+            "630\n",
+            "640\n",
+            "650\n",
+            "660\n",
+            "670\n",
+            "680\n",
+            "690\n",
+            "700\n",
+            "710\n",
+            "720\n",
+            "730\n",
+            "740\n",
+            "750\n",
+            "760\n",
+            "770\n",
+            "780\n",
+            "790\n",
+            "800\n",
+            "810\n",
+            "820\n",
+            "830\n",
+            "840\n",
+            "850\n",
+            "858 xqzzydzmtq.mp4\n",
+            "OpenCV(4.1.2) /io/opencv/modules/imgproc/src/resize.cpp:3720: error: (-215:Assertion failed) !ssize.empty() in function 'resize'\n",
+            "\n",
+            "860\n",
+            "870\n",
+            "880\n",
+            "890\n",
+            "900\n",
+            "910\n",
+            "920\n",
+            "930\n",
+            "940\n",
+            "950\n",
+            "960\n",
+            "970\n",
+            "980\n",
+            "990\n",
+            "1000\n",
+            "1010\n",
+            "1020\n",
+            "1030\n",
+            "1030\n"
           ],
           "name": "stdout"
         }
